# Supervised-Learning-Unbalanced-Data

./: .gitignore  Model.py  PreProcessing.py  Processing.py  pyproject.toml  test.ipynb
app_machine/: pyproject.toml
app_machine/scripts/: bank_marketing.ipynb  credit_fraud.ipynb  employee_attrition.ipynb
app_machine/src/: globals.py
app_machine/src/core/: Analyser.py  ComputeModel.py  Model.py  Processing.py
app_machine/tests/: test_compute_model.py
archive/seance1/: script.R
automatisation-production/: Model.py
exploration-prototypage/python-notebooks/: bank_marketing.ipynb  churn_prediction.ipynb  credit_fraud.ipynb  credit_fraud_okseq3.ipynb  data.py  employee_attrition.ipynb  employee_attrition_okseq3.ipynb  unbalanced_exploratory_data_analysis.ipynb
exploration-prototypage/python-notebooks/save/: P_Support-Vector-Machines_fullExample.ipynb  churn_prediction.ipynb  unbalanced_exploratory_data_analysis.ipynb
seance2/: P_Support-Vector-Machines_fullExample.ipynb
src/: globals.py
src/core/: Analyser.py  ComputeModel.py  Model.py  PreProcessing.py  Processing.py  globals.py
src/core/model/: ComputeModel.py  Processing.py
src/scripts/R/: script.R
src/scripts/python-notebooks/: bank_marketing.ipynb  bank_marketing_okseq3.ipynb  bank_marketing_scripts.ipynb  credit_fraud.ipynb  credit_fraud_okseq3.ipynb  credit_fraud_scripts.ipynb  employee_attrition.ipynb  employee_attrition_okseq3.ipynb  employee_attrition_scripts.ipynb
tests/: test.ipynb  test_analyser.py  test_compute_model.py  test_processing.py
