[tool.poetry]
name = "app-machine"
version = "0.1.0"
description = "Preprocessing/Processing/MachineLearning Model"
authors = ["khaldi <jalalkhaldi3@gmail.com>"]
readme = "README.md"
packages = [{include = "app_machine"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.1"
jupyter = "^1.0.0"
rpy2 = "^3.5.10"
chaid = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
