[tool.poetry]
name = "app-machine"
version = "0.1.0"
description = "Preprocessing/Processing/MachineLearning Model"
authors = ["khaldi <jalalkhaldi3@gmail.com>", "godwin <winneramegah492@gmail.com>"]
readme = "README.md"
packages = [{include = "./src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
chaid = "^5.3.0"
graphviz = "^0.20.1"
ipython = "^8.11.0"
joblib = "^1.2.0"
ffmpeg = "^1.4"
tornado = "^6.2"
cython = "^0.29.33"
jsonschema = "^4.17.3"
ipython-genutils = "^0.2.0"
ansi2html = "^1.8.0"
anyio = "^3.6.2"
appnope = "^0.1.3"
argon2-cffi = "^21.3.0"
async-generator = "^1.10"
attrs = "^22.2.0"
babel = "^2.12.1"
backcall = "^0.2.0"
brotli = "^1.0.9"
certifi = "^2022.12.7"
cffi = "^1.15.1"
chardet = "^5.1.0"
click = "^8.1.3"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-renderer = "^1.9.1"
dash-table = "^5.0.0"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
flask = "^2.2.3"
flask-compress = "^1.13"
future = "^0.18.3"
gunicorn = "^20.1.0"
idna = "^3.4"
json5 = "^0.9.11"
jinja2 = "^3.1.2"
jedi = "^0.18.2"
jupyter = "^1.0.0"
jupyter-client = "^8.0.3"
jupyter-core = "^5.2.0"
jupyter-dash = "^0.4.2"
jupyter-packaging = "^0.12.3"
jupyter-server = "^2.4.0"
jupyterlab = "^3.6.1"
jupyterlab-pygments = "^0.2.2"
jupyterlab-server = "^2.20.0"
markupsafe = "^2.1.2"
mistune = "^2.0.5"
nbclassic = "^0.5.3"
nbclient = "^0.7.2"
nbconvert = "^7.2.9"
nbformat = "^5.7.3"
nest-asyncio = "^1.5.6"
notebook = "^6.5.3"
numpy = "^1.24.2"
packaging = "^23.0"
pandas = "^1.5.3"
pandocfilters = "^1.5.0"
parso = "^0.8.3"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
plotly = "^5.13.1"
prometheus-client = "^0.16.0"
prompt-toolkit = "^3.0.38"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pygments = "^2.14.0"
pyparsing = "^3.0.9"
pyrsistent = "^0.19.3"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
pyzmq = "^25.0.1"
requests = "^2.28.2"
retrying = "^1.3.4"
scipy = "^1.10.1"
send2trash = "^1.8.0"
six = "^1.16.0"
sklearn = "^0.0.post1"
sniffio = "^1.3.0"
terminado = "^0.17.1"
testpath = "^0.6.0"
threadpoolctl = "^3.1.0"
imblearn = "^0.0"
mlxtend = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
