[tool.poetry]
name = "app-machine"
version = "0.1.0"
description = "Preprocessing/Processing/MachineLearning Model"
authors = ["khaldi <jalalkhaldi3@gmail.com>"]
readme = "README.md"
packages = [{include = "./src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scikit-learn = "^1.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
rpy2 = "^3.5.10"
chaid = "^5.3.0"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
